--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -212,7 +212,7 @@
         <ul>
           <li>
             <a
-              href="/api/v3/helpdesk/zendesk"
+              [href]="getHelpdeskRedirectUrl()"
               target="_blank"
               i18n="@@COMMON_FOOTER__HELP_DESK"
             >
