Update boost content policy terms-of-service#13

--- a/src/app/modules/report/marketing/marketing.component.html
+++ b/src/app/modules/report/marketing/marketing.component.html
@@ -117,27 +117,37 @@
     </ul>
 
     <h2>Boost Policy</h2>
+
     <p>
       Boost is the advertising network on Minds. Users may exchange Minds Tokens
-      to “Boost” their content and receive views from the network. Users may not
-      Boost any content that is in violation of our Content Policy.
-      Additionally, users may not Boost content that:
+      to “Boost” their content and receive views and increased interaction from
+      the network. It is against the content policy to boost content that:
     </p>
 
     <ul>
-      <li>Appeals on a moderation decision</li>
+      <li>Violates Terms of Service</li>
+      <li>Is tagged NSFW</li>
+      <li>Sells Minds Tokens</li>
+      <li>Qualifies as a Help and Support Request</li>
       <li>Exceeds Boost rate limits</li>
-      <li>Is a Help & Support request</li>
-      <li>Is selling Minds Tokens</li>
+      <li>Appeals on a moderation decision</li>
       <li>Contains content from a banned user</li>
-      <li>On-chain payment failed</li>
-      <li>Original post has been removed</li>
     </ul>
 
     <p>
-      If you would like to appeal a Boost rejection, you may do so by emailing
-      info@minds.com with the post in question and the reasons for why you
-      believe it should be accepted.
+      In addition, boosts will be rejected if the on-chain payment failed or the
+      original post has been removed.
+    </p>
+
+    <p>
+      If you would like to appeal a Boost rejection, you may do so by
+      <a
+        href="https://support.minds.com/hc/en-us/requests/new?ticket_form_id=360001861631"
+        target="_blank"
+        >submitting a support ticket</a
+      >
+      with the post in question and the reasons for why you believe it should be
+      accepted.
     </p>
 
     <h2>Spam Policy</h2>
