Rich-embeds for activity v3

--- a/src/app/modules/channels/v2/feed/feed.component.ng.scss
+++ b/src/app/modules/channels/v2/feed/feed.component.ng.scss
@@ -18,6 +18,7 @@
       [class*='m-pageLayout__pane'] {
         .m-channelFeed__list {
           padding: 0 0 $spacing7;
+          @include borderRight;
         }
       }
 
