--- a/src/stylesheets/defaults.scss
+++ b/src/stylesheets/defaults.scss
@@ -124,3 +124,37 @@ $layout-sidebar-width: 80px;
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
 }
+
+// Borders ---------------------------------------------
+// ojm add this whereever it's used
+$borderRadius--activity: 3px;
+
+@mixin border {
+  @include m-theme() {
+    border: 1px solid themed($m-borderColor--primary);
+  }
+}
+
+@mixin borderTop {
+  @include m-theme() {
+    border-top: 1px solid themed($m-borderColor--primary);
+  }
+}
+
+@mixin borderRight {
+  @include m-theme() {
+    border-right: 1px solid themed($m-borderColor--primary);
+  }
+}
+
+@mixin borderBottom {
+  @include m-theme() {
+    border-bottom: 1px solid themed($m-borderColor--primary);
+  }
+}
+
+@mixin borderLeft {
+  @include m-theme() {
+    border-left: 1px solid themed($m-borderColor--primary);
+  }
+}
