--- a/src/app/modules/newsfeed/activity-v2/activity.component.html
+++ b/src/app/modules/newsfeed/activity-v2/activity.component.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="m-activity__rightColumn">
-    <m-activityV2__flags></m-activityV2__flags>
+    <m-activityV2__flag></m-activityV2__flag>
     <m-activityV2__ownerBlock
       *ngIf="service.displayOptions.showOwnerBlock"
       (deleted)="delete()"
