Capitalize text for community owned #5358

--- a/src/app/modules/discovery/disclaimer/disclaimer.component.html
+++ b/src/app/modules/discovery/disclaimer/disclaimer.component.html
@@ -1,5 +1,5 @@
 <m-sidebarWidget
-  title="The community-owned Social Network"
+  title="The Community-Owned Social Network"
   dismissibleId="discovery-disclaimer-2020"
   headerLevel="1"
 >
