Comment out allow and disable comment options #5357

--- a/src/app/common/components/post-menu/post-menu.component.html
+++ b/src/app/common/components/post-menu/post-menu.component.html
@@ -195,7 +195,7 @@
     </li>
   </ng-container>
   <!-- ALLOW COMMENTS -->
-  <ng-container
+  <!-- <ng-container
     *ngIf="
       options.indexOf('allow-comments') !== -1 &&
       entity.ownerObj.guid == session.getLoggedInUser().guid
@@ -217,7 +217,7 @@
     >
       Disable Comments
     </li>
-  </ng-container>
+  </ng-container> -->
   <!-- ADMIN EDIT FLAGS -->
   <ng-container
     *ngIf="options.indexOf('set-explicit') !== -1 && session.isAdmin()"
