--- a/src/stylesheets/spacing.scss
+++ b/src/stylesheets/spacing.scss
@@ -9,7 +9,7 @@
 // Assuming root font-size is 16px...
 
 // We use 4px as the smallest increment
-// So we don't have to do as much math
+// To minimize having to do maths
 
 $spacing1: 0.25rem; // 4px
 $spacing2: 0.5rem; // 8px
