--- a/src/stylesheets/typography.scss
+++ b/src/stylesheets/typography.scss
@@ -1,140 +1,142 @@
 // USAGE --------------------
 
 // .m-myComponent {
-//   @include .heading2Medium;
+//   @include heading2Medium;
 // }
 
 // Format:
-//{heading/body}{size#}{weight}
+//{heading | body}{size#}{weight}
 
 //- BOLD ---------------------
 @mixin heading1Bold {
-  @include heading1;
-  @include fontWeightBold;
+  @include _heading1;
+  @include _fontWeightBold;
 }
 @mixin heading2Bold {
-  @include heading2;
-  @include fontWeightBold;
+  @include _heading2;
+  @include _fontWeightBold;
 }
 @mixin heading3Bold {
-  @include heading3;
-  @include fontWeightBold;
+  @include _heading3;
+  @include _fontWeightBold;
 }
 @mixin heading4Bold {
-  @include heading4;
-  @include fontWeightBold;
+  @include _heading4;
+  @include _fontWeightBold;
 }
 @mixin body1Bold {
-  @include body1;
-  @include fontWeightBold;
+  @include _body1;
+  @include _fontWeightBold;
 }
 @mixin body2Bold {
-  @include body2;
-  @include fontWeightBold;
+  @include _body2;
+  @include _fontWeightBold;
 }
 @mixin body3Bold {
-  @include body3;
-  @include fontWeightBold;
+  @include _body3;
+  @include _fontWeightBold;
 }
 // - MEDIUM ---------------------
 @mixin heading1Medium {
-  @include heading1;
-  @include fontWeightMedium;
+  @include _heading1;
+  @include _fontWeightMedium;
 }
 @mixin heading2Medium {
-  @include heading2;
-  @include fontWeightMedium;
+  @include _heading2;
+  @include _fontWeightMedium;
 }
 @mixin heading3Medium {
-  @include heading3;
-  @include fontWeightMedium;
+  @include _heading3;
+  @include _fontWeightMedium;
 }
 @mixin heading4Medium {
-  @include heading4;
-  @include fontWeightMedium;
+  @include _heading4;
+  @include _fontWeightMedium;
 }
 @mixin body1Medium {
-  @include body1;
-  @include fontWeightMedium;
+  @include _body1;
+  @include _fontWeightMedium;
 }
 @mixin body2Medium {
-  @include body2;
-  @include fontWeightMedium;
+  @include _body2;
+  @include _fontWeightMedium;
 }
 @mixin body3Medium {
-  @include body3;
-  @include fontWeightMedium;
+  @include _body3;
+  @include _fontWeightMedium;
 }
 //- REGULAR ---------------------
 @mixin heading1Regular {
-  @include heading1;
-  @include fontWeightRegular;
+  @include _heading1;
+  @include _fontWeightRegular;
 }
 @mixin heading2Regular {
-  @include heading2;
-  @include fontWeightRegular;
+  @include _heading2;
+  @include _fontWeightRegular;
 }
 @mixin heading3Regular {
-  @include heading3;
-  @include fontWeightRegular;
+  @include _heading3;
+  @include _fontWeightRegular;
 }
 @mixin heading4Regular {
-  @include heading4;
-  @include fontWeightRegular;
+  @include _heading4;
+  @include _fontWeightRegular;
 }
 @mixin body1Regular {
-  @include body1;
-  @include fontWeightRegular;
+  @include _body1;
+  @include _fontWeightRegular;
 }
 @mixin body2Regular {
-  @include body2;
-  @include fontWeightRegular;
+  @include _body2;
+  @include _fontWeightRegular;
 }
 @mixin body3Regular {
-  @include body3;
-  @include fontWeightRegular;
+  @include _body3;
+  @include _fontWeightRegular;
 }
 
 //----------------------
+// Internal use only
+//
 // DON'T use these in your
 // component stylesheets
 
-@mixin fontWeightBold {
+@mixin _fontWeightBold {
   font-weight: 700;
 }
-@mixin fontWeightMedium {
+@mixin _fontWeightMedium {
   font-weight: 500;
 }
-@mixin fontWeightRegular {
+@mixin _fontWeightRegular {
   font-weight: 400;
 }
 //----------------------
-@mixin heading1 {
+@mixin _heading1 {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-@mixin heading2 {
+@mixin _heading2 {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-@mixin heading3 {
+@mixin _heading3 {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-@mixin heading4 {
+@mixin _heading4 {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 //----------------------
-@mixin body1 {
+@mixin _body1 {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-@mixin body2 {
+@mixin _body2 {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-@mixin body3 {
+@mixin _body3 {
   font-size: 0.8125rem;
   line-height: 1rem;
 }
