(chore): Updating the registration/login modal

--- a/src/app/common/components/modal-close-button/modal-close-button.component.html
+++ b/src/app/common/components/modal-close-button/modal-close-button.component.html
@@ -1,3 +1,9 @@
-<a [class.white]="white" (click)="close()">
+<a
+  [ngClass]="{
+    grey: color === 'grey',
+    white: color === 'white'
+  }"
+  (click)="close()"
+>
   <i class="material-icons">close</i>
 </a>
