--- a/src/app/modules/auth/multi-factor-auth/multi-factor-auth.component.html
+++ b/src/app/modules/auth/multi-factor-auth/multi-factor-auth.component.html
@@ -37,4 +37,4 @@
   </div>
 </ng-container>
 
-<m-modalCloseButton [white]="true"></m-modalCloseButton>
+<m-modalCloseButton [color]="'white'"></m-modalCloseButton>
