--- a/src/app/modules/boost/creator/creator.component.html
+++ b/src/app/modules/boost/creator/creator.component.html
@@ -380,4 +380,4 @@
   </section>
 </div>
 
-<m-modalCloseButton [white]="true"></m-modalCloseButton>
+<m-modalCloseButton [color]="'white'"></m-modalCloseButton>
