--- a/src/app/modules/boost/modal/boost-modal.component.html
+++ b/src/app/modules/boost/modal/boost-modal.component.html
@@ -62,4 +62,4 @@
   </ng-container>
 </ng-template>
 
-<m-modalCloseButton [white]="true"></m-modalCloseButton>
+<m-modalCloseButton [color]="'white'"></m-modalCloseButton>
