--- a/src/app/modules/modals/concert-colors/concert-colors-modal.component.html
+++ b/src/app/modules/modals/concert-colors/concert-colors-modal.component.html
@@ -5,4 +5,4 @@
   <ng-content></ng-content>
 </div>
 
-<m-modalCloseButton [white]="true"></m-modalCloseButton>
+<m-modalCloseButton [color]="'white'"></m-modalCloseButton>
