--- a/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
+++ b/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
@@ -4,7 +4,7 @@
     <h2 i18n="@@WALLETV2_ONCHAIN_TRANSFER__TRANSFER_ONCHAIN">
       Transfer On-chain
     </h2>
-    <m-modalCloseButton [white]="true"></m-modalCloseButton>
+    <m-modalCloseButton [color]="'white'"></m-modalCloseButton>
   </div>
   <div class="m-walletModal__content">
     <!-- -------------------------------------- -->
