--- a/src/app/modules/wire/v2/creator/wire-creator.component.html
+++ b/src/app/modules/wire/v2/creator/wire-creator.component.html
@@ -25,4 +25,4 @@
   <m-wireCreator__toolbar (onSubmit)="onSubmit()"></m-wireCreator__toolbar>
 </div>
 
-<m-modalCloseButton [white]="true"></m-modalCloseButton>
+<m-modalCloseButton [color]="'white'"></m-modalCloseButton>
