Fix z-index issue with Transak modal showing behind our modals #5343

--- a/src/app/modules/blockchain/token-purchase/v2/buy-tokens-modal.component.html
+++ b/src/app/modules/blockchain/token-purchase/v2/buy-tokens-modal.component.html
@@ -82,3 +82,8 @@
     </div>
   </div>
 </m-concertColors__modal>
+<!-- 
+  Non-templated component that applies CSS overrides
+  globally for the Transak modal.
+-->
+<m-transak__globalStyle></m-transak__globalStyle>
