--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -60,4 +60,5 @@
 <m-channel--onboarding *ngIf="showOnboarding"></m-channel--onboarding>
 <m-formToast></m-formToast>
 <m-joinBanner *ngIf="!isMobileOrTablet()"></m-joinBanner>
-<m-appPrompt *ngIf="isMobileOrTablet()"></m-appPrompt>
+<!-- TODO: Add back in -->
+<m-appPrompt></m-appPrompt>
