--- a/src/app/modules/homepage-v3/homepage-v3.component.html
+++ b/src/app/modules/homepage-v3/homepage-v3.component.html
@@ -16,10 +16,7 @@
           {{ headline }}
         </h2>
 
-        <p
-          class="m-homepage__v3__description"
-          i18n="@@HOMEPAGE__V2__FREE_YOUR_MIND_HEADER"
-        >
+        <p class="m-homepage__v3__description">
           {{ description }}
         </p>
 
@@ -91,7 +88,7 @@
 
         <p
           class="m-marketing__description"
-          i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__DESCRIPTION"
+          i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__P1"
         >
           Big tech has abused its power and lost the trust of its community.
           Their policies and behavior have caused polarization to reach all-time
@@ -100,7 +97,7 @@
 
         <p
           class="m-marketing__description"
-          i18n="@@HOMEPAGE_V2__EARN_DAILY_CONTRIBUTION"
+          i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__P2"
         >
           We are on a mission to elevate global discourse through Internet
           freedom.
@@ -108,18 +105,28 @@
 
         <p
           class="m-marketing__description"
-          i18n="@@HOMEPAGE_V2__RECEIVE_DIRECT_PAYMENTS"
+          i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__P3"
         >
           Internet freedom means:
         </p>
 
         <ul>
-          <li>Free speech</li>
-          <li>Privacy</li>
-          <li>Open source</li>
-          <li>Self-sovereignty</li>
-          <li>Community governance</li>
-          <li>Crypto economy</li>
+          <li i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__FREE_SPEECH">
+            Free speech
+          </li>
+          <li i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__PRIVACY">Privacy</li>
+          <li i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__OPEN_SOURCE">
+            Open source
+          </li>
+          <li i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__SELF_SOVEREIGNTY">
+            Self-sovereignty
+          </li>
+          <li i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__COMMUNITY_GOVERNANCE">
+            Community governance
+          </li>
+          <li i18n="@@HOMEPAGE_V3__BRIDGE_THE_DIVIDE__CRYPTO_ECONOMY">
+            Crypto economy
+          </li>
         </ul>
 
         <div class="m-marketing__actionButtons">
@@ -260,8 +267,8 @@
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-12 m-marketing__body">
         <h3 class="m-marketingTitle__centered">
-          <ng-container i18n="@@HOMEPAGE_V2__TAKE_BACK_CONTROL"
-            >Take back control of your social media</ng-container
+          <ng-container i18n="@@HOMEPAGE_V3__TITLE"
+            >Elevate the global conversation</ng-container
           >
         </h3>
 
